src/snapshots/afrotd__parser__tests__interpretation_html_7.3.6_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein inbounds in der Luft befindlicher Spieler erreicht einen
            legalen Vorwärtspass. Noch in der Luft wird er von einem Gegner
            getackelt und für einen Moment deutlich festgehalten, bevor er in
            eine Richtung getragen wird. Er landet daraufhin mit dem Ball im
            oder außerhalb des Feldes.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Pass ist vollständig. Der Ball ist an der Stelle dead, wo
                der Receiver oder der Spieler, der den Ball abfängt, in einer
                Art festgehalten wird, die ihn daran hindert, sofort auf den
                Boden zurückzukehren (Regeln 4.1.3.p).
            </p>
        </details>
    </div>
</article>
