src/snapshots/afrotd__parser__tests__interpretation_html_7.3.6_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Der in der Luft befindliche A80 erreicht einen legalen Vorwärtspass
            an seiner 30-Meterlinie. Noch im Flug wird er von B40 getackelt und
            bis zu der A-34 geschoben, wo er zu Fall gebracht wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball an der A-34 (Regel 5.1.3.a).
            </p>
        </details>
    </div>
</article>
