src/snapshots/afrotd__parser__tests__interpretation_html_7.3.6_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            A86 wird von B18 an der B-2 legal ins Aus geblockt. A86 versucht,
            sofort wieder ins Spielfeld zurückzukommen und springt von außen in
            die Luft. Er befindet sich in der Luft, als er QB A16’s legalen
            Vorwärtspass erreicht. Er landet in Team B’s Endzone mit dem Ball
            in seinen Händen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Vorwärtspass. A86 etablierte sich nicht
                inbounds, bevor er den Pass berührte und war damit faktisch im
                Aus (Regel 2.27.15).
            </p>
        </details>
    </div>
</article>
