src/snapshots/afrotd__parser__tests__interpretation_html_7.3.7_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.7.II
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 9 von der A-6. A1 wirft den Ball in seiner Endzone
            absichtlich zu Boden, um Raumverlust zu vermeiden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B kann die Strafe für einen Safety akzeptieren. Wenn sie
                die Strafe ablehnen, ist es Team B’s Ball, First Down und Goal
                von der A-6.
            </p>
        </details>
    </div>
</article>
