src/snapshots/afrotd__parser__tests__interpretation_html_7.3.7_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.7.III
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 9 von der A-6. A1 wirft einen zweiten Vorwärtspass aus
            seiner Endzone. B2 fängt den Ball ab und wird an der A-20 zu Boden
            gebracht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B kann die Strafe annehmen, die in einem Safety resultiert
                oder das Ergebnis des Downs akzeptieren und den Ball für einen
                First Down von der A-20 behalten.
            </p>
        </details>
    </div>
</article>
