src/snapshots/afrotd__parser__tests__interpretation_html_7.3.8_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Wide Receiver A88 und Defender B1 laufen Schulter an Schulter und
            Seite an Seite 15 Meter jenseits der neutrale Zone. A88 befindet
            sich dabei näher zur Seitenlinie und B1 näher zur Hash Mark. Ein
            legaler Vorwärtspass wird in Richtung eines Torpfostens geworfen.
            Während der Ball fliegt, biegt A88 nach innen, in Richtung des
            fangbaren Vorwärtspasses ab. B1 bewegt sich nicht zur Seite und
            macht auch keinen Versuch, an den Ball zu gelangen und A88 prallt
            gegen ihn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B-Foul. Defense Passbehinderung. 15-Meterstrafe vom
                Previous Spot und First Down.
            </p>
        </details>
    </div>
</article>
