src/snapshots/afrotd__parser__tests__interpretation_html_7.3.8_15.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XV
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem legalen Vorwärtspass versuchen A80 und B60 jenseits der
            neutralen Zone diesen Vorwärtspass zu fangen, der in Richtung von
            A80 geworfen wurde. Der Pass ist zu hoch und wird als nicht fangbar
            gewertet. Als der Ball A80 überfliegt, drückt dieser gegen B60’s
            Brust.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Offense Passbehinderung.
            </p>
        </details>
    </div>
</article>
