src/snapshots/afrotd__parser__tests__interpretation_html_7.3.8_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Wide Receiver A80 befindet sich 15 Meter jenseits der neutralen
            Zone und dreht seinen Rücken zur neutralen Zone. Der Passer wirft
            den Ball hoch über A80’s Hände, die er über dem Kopf ausgestreckt
            hat. Der Ball ist überworfen worden und befindet sich jenseits des
            Receivers (nicht fangbarer Pass), als B2 A80 am Helmgitter zu Boden
            zieht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Persönliches Foul (9.1.12.a), aber keine Passbehinderung.
                Strafe – 15 Meter vom Previous Spot. First Down und 10 für Team
                A. Verursacher schwerer Fouls müssen disqualifiziert werden.
            </p>
        </details>
    </div>
</article>
