src/snapshots/afrotd__parser__tests__interpretation_html_7.3.8_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim Snap befindet sich A88 an der Scrimmage Line 10 Meter von der
            Tackle Position entfernt und A44 befindet sich im Backfield, vier
            Meter hinter und seitlich von A88’s Innenseite. Bevor der Passer
            den Ball loslässt, wird B1 von A88 fünf Meter jenseits der
            neutralen Zone geblockt. Der Pass wird zu A44 geworfen, der sich
            vorwärts bewegt hat und zur Seite läuft, in den Bereich, in dem B1
            von A88 geblockt wurde.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul. Offense Passbehinderung. Strafe – 15 Meter vom
                Previous Spot.
            </p>
        </details>
    </div>
</article>
